# vcpkgqt

./: .gitignore  CMakeLists.txt  ReadMe.md  delegate.cpp  delegate.h
